refactor: moved LeaderboardController constructor to use constructor injection instead of @Autowired dependency injection, optimized LeaderboardService by improving variable usage and converting to Java Stream's toList() fix: nullpointer exception in LeaderboardService